testsuite/poke.pkl/apush-diag-2.pk
/* { dg-do compile } */

var a =
  apush ([1,2,3],
         "foo"); /* { dg-error "invalid operand.*\n.*expected int" } */
